<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_learning"
        android:title="@string/action_learning"
        android:icon="@drawable/ic_school"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_backup"
        android:title="@string/action_backup"
        android:icon="@drawable/ic_backup"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sync_pc"
        android:title="@string/action_sync_pc"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_review"
        android:title="@string/menu_review"
        android:icon="@drawable/ic_review_alt"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
</menu>
